# web-scraping-with-scrapy

./: README.md  docker-compose.yml  pyproject.toml
bookscraper/: booksdata.json  cleandata.json
bookscraper/bookscraper/: bookdata.csv  bookdata.json  middlewares.py  pipelines.py  settings.py
bookscraper/bookscraper/spiders/: bookspider.py
